crates/djls-extraction/tests/snapshots/golden__allauth_full.snap
---
source: crates/djls-extraction/tests/golden.rs
expression: snapshot(combined)
---
tag_rules:
  "allauth::get_providers":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "allauth::get_social_accounts":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: user
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "allauth::provider_login_url":
    arg_constraints:
      - Min: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: provider
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
  "allauth::providers_media_js":
    arg_constraints:
      - Max: 1
    required_keywords: []
    known_options: ~
    extracted_args: []
    supports_as_var: true
  "allauth::setvar":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "allauth::user_display":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: user
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs:
  "allauth::element":
    end_tag: endelement
    intermediates: []
    opaque: false
  "allauth::setvar":
    end_tag: endsetvar
    intermediates: []
    opaque: false
  "allauth::slot":
    end_tag: endslot
    intermediates: []
    opaque: false
