crates/djls-extraction/tests/snapshots/golden__cache_full.snap
---
source: crates/djls-extraction/tests/golden.rs
expression: snapshot(result)
---
tag_rules:
  "django.templatetags.cache::cache":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs:
  "django.templatetags.cache::cache":
    end_tag: endcache
    intermediates: []
    opaque: false
