crates/djls-extraction/tests/snapshots/golden__extract_defaulttags_subset.snap
---
source: crates/djls-extraction/tests/golden.rs
expression: result
---
tags:
  - name: autoescape
    decorator_kind: Tag
    rules:
      - condition:
          ExactArgCount:
            count: 2
            negated: true
        message: "'autoescape' tag requires exactly one argument."
      - condition:
          Opaque:
            description: unrecognized comparison
        message: "'autoescape' argument should be 'on' or 'off'"
    block_spec:
      end_tag: endautoescape
      intermediate_tags: []
      opaque: true
    extracted_args:
      - name: arg
        kind: Variable
        required: true
  - name: if
    decorator_kind: Tag
    rules: []
    block_spec:
      end_tag: endif
      intermediate_tags:
        - name: elif
          repeatable: false
        - name: else
          repeatable: false
      opaque: false
    extracted_args: []
  - name: for
    decorator_kind: Tag
    rules:
      - condition:
          MaxArgCount:
            max: 3
        message: "'for' statements should have at least four words"
      - condition:
          LiteralAt:
            index: 2
            value: in
            negated: true
        message: "'for' statements should use 'for x in y'"
    block_spec:
      end_tag: endfor
      intermediate_tags:
        - name: empty
          repeatable: false
      opaque: false
    extracted_args:
      - name: arg1
        kind: Variable
        required: true
      - name: in
        kind:
          Literal:
            value: in
        required: true
      - name: arg3
        kind: Variable
        required: true
  - name: now
    decorator_kind: SimpleTag
    rules: []
    block_spec: ~
    extracted_args:
      - name: format_string
        kind: Variable
        required: true
filters:
  - name: title
    arity: None
  - name: default
    arity: Optional
  - name: truncatewords
    arity: Required
