crates/djls-extraction/tests/snapshots/golden__loader_tags_full.snap
---
source: crates/djls-extraction/tests/golden.rs
expression: snapshot(result)
---
tag_rules:
  "django.template.loader_tags::block":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: block_name
        required: true
        kind: Variable
        position: 0
  "django.template.loader_tags::extends":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
  "django.template.loader_tags::include":
    arg_constraints:
      - Min: 2
    required_keywords: []
    known_options:
      values:
        - with
        - only
      allow_duplicates: false
      rejects_unknown: true
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
filter_arities: {}
block_specs:
  "django.template.loader_tags::block":
    end_tag: endblock
    intermediates: []
    opaque: false
