crates/djls-extraction/tests/snapshots/golden__static_full.snap
---
source: crates/djls-extraction/tests/golden.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs: {}
